@@ -1,77 +1,68 @@
 package io.github.cocosip.polystore.spring;
 
+import io.github.cocosip.polystore.ContainerConfiguration;
 import io.github.cocosip.polystore.ContainerInfo;
-import io.github.cocosip.polystore.SaveArgs;
 import io.github.cocosip.polystore.StorageContainer;
+import io.github.cocosip.polystore.StorageSaveOptions;
 import io.github.cocosip.polystore.TenantIdSupplier;
-import io.github.cocosip.polystore.TenantIsolationMode;
-import io.github.cocosip.polystore.UrlArgs;
 import io.github.cocosip.polystore.exception.TenantIdMissingException;
 import java.io.InputStream;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.List;
+import java.nio.file.Path;
+import java.time.Instant;
 
-/**
- * Wraps a container configured with {@link TenantIsolationMode#PATH_PREFIX} and transparently
- * prefixes every file path with the resolved tenant id: {@code images/photo.jpg} becomes
- * {@code {tenantId}/images/photo.jpg}.
- *
- * <p>Tenant id resolution priority: {@link SaveArgs#getTenantId()} (explicit) &gt;
- * {@link TenantIdSupplier} (implicit) &gt; missing. A missing id raises
- * {@link TenantIdMissingException}.</p>
- */
+/** Public container decorator that prefixes logical file identifiers with a tenant id. */
 public final class TenantPathPrefixContainer implements StorageContainer {
-
     private final StorageContainer inner;
     private final TenantIdSupplier tenantIdSupplier;
 
-    /**
-     * Creates the isolating view.
-     *
-     * @param inner            the container to wrap, never {@code null}
-     * @param tenantIdSupplier tenant id source, may be {@code null} (then only explicit
-     *                         {@code SaveArgs.tenantId} can satisfy PATH_PREFIX)
-     */
+    /** Creates the tenant-isolating view. */
     public TenantPathPrefixContainer(StorageContainer inner, TenantIdSupplier tenantIdSupplier) {
         this.inner = inner;
         this.tenantIdSupplier = tenantIdSupplier;
     }
 
     @Override
-    public void save(String fileName, InputStream inputStream, SaveArgs args) {
-        String explicit = args.getTenantId();
-        String tenantId = explicit != null && !explicit.trim().isEmpty() ? explicit : requireSupplierTenantId();
-        inner.save(tenantId + "/" + fileName, inputStream, args);
+    public String save(
+            String fileId,
+            InputStream stream,
+            long contentLength,
+            String ext,
+            boolean overrideExisting,
+            StorageSaveOptions options) {
+        StorageSaveOptions actual = options == null ? StorageSaveOptions.defaults() : options;
+        String explicit = actual.getTenantId();
+        String tenantId = explicit != null && !explicit.isBlank() ? explicit : requireSupplierTenantId();
+        return inner.save(tenantId + "/" + fileId, stream, contentLength, ext, overrideExisting, actual);
     }
 
     @Override
-    public InputStream get(String fileName) {
-        return inner.get(prefix(fileName));
+    public boolean delete(String fileId) {
+        return inner.delete(prefix(fileId));
     }
 
     @Override
-    public void delete(String fileName) {
-        inner.delete(prefix(fileName));
+    public boolean exists(String fileId) {
+        return inner.exists(prefix(fileId));
     }
 
     @Override
-    public boolean exists(String fileName) {
-        return inner.exists(prefix(fileName));
+    public boolean download(String fileId, Path path) {
+        return inner.download(prefix(fileId), path);
     }
 
     @Override
-    public String getUrl(String fileName, UrlArgs args) {
-        return inner.getUrl(prefix(fileName), args);
+    public InputStream getOrNull(String fileId) {
+        return inner.getOrNull(prefix(fileId));
     }
 
     @Override
-    public void deleteAll(Collection<String> fileNames) {
-        List<String> prefixed = new ArrayList<>(fileNames.size());
-        for (String fileName : fileNames) {
-            prefixed.add(prefix(fileName));
-        }
-        inner.deleteAll(prefixed);
+    public String getAccessUrl(String fileId, Instant expires, boolean checkFileExist) {
+        return inner.getAccessUrl(prefix(fileId), expires, checkFileExist);
+    }
+
+    @Override
+    public ContainerConfiguration getConfiguration() {
+        return inner.getConfiguration();
     }
 
     @Override
@@ -89,18 +80,14 @@ public final class TenantPathPrefixContainer implements StorageContainer {
         return inner.getInfo();
     }
 
-    private String prefix(String fileName) {
-        return requireSupplierTenantId() + "/" + fileName;
+    private String prefix(String fileId) {
+        return requireSupplierTenantId() + "/" + fileId;
     }
 
     private String requireSupplierTenantId() {
-        if (tenantIdSupplier == null) {
-            throw new TenantIdMissingException(inner.getName());
-        }
+        if (tenantIdSupplier == null) throw new TenantIdMissingException(inner.getName());
         String tenantId = tenantIdSupplier.get();
-        if (tenantId == null || tenantId.trim().isEmpty()) {
-            throw new TenantIdMissingException(inner.getName());
-        }
+        if (tenantId == null || tenantId.isBlank()) throw new TenantIdMissingException(inner.getName());
         return tenantId;
     }
 }
